--- a/cloudam/node01/Dockerfile_localdb
+++ b/cloudam/node01/Dockerfile_localdb
@@ -6,6 +6,7 @@ COPY requirements_localdb.txt .
 RUN pip install --no-cache-dir -r requirements_localdb.txt
 
 COPY localdb.py .
+COPY localdbsharedlib.py .
 COPY .env .
 
 EXPOSE 5001
